src/objects/Relationship__c.object
<CustomObject>
    <description>Object to relate different kinds of account relationships - Account to Account and Invoice Recipients</description>
    <fields>
        <fullName>Account_Corporate_Registration_Number__c</fullName>
        <label>Account Corporate Registration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Involved_Party_ID__c</fullName>
        <label>Account Involved Party ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>To be populated by workflow and used for searching in Global Search. Will not be visible on any page layouts</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Search_for_IDs__c</fullName>
        <description>Populated by workflow, a concatenation of all IDs that PostNord want to search, delimited by &quot;+&quot;. Helps in lookup searching and global search.</description>
        <label>Account Search for IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Account)</relationshipLabel>
        <relationshipName>Involved_Party_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PN_Mark_As_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN_Mark_As_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_ErrorReasonCode__c</fullName>
        <label>PN Synchronization ErrorReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronization Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rel_Acc_Corporate_Registration_Number__c</fullName>
        <label>Rel Acc Corporate Registration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Acc_Search_for_IDs__c</fullName>
        <description>Populated by workflow, a concatenation of all IDs that PostNord want to search, delimited by &quot;+&quot;. Helps in lookup searching and global search.</description>
        <label>Rel Acc Search for IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Account_Involved_Party_ID__c</fullName>
        <label>Rel Account Involved Party ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_Name__c</fullName>
        <description>To be populated by workflow and used for searching in Global Search. Will not be visible on any page layouts</description>
        <label>Related Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Involved_Party_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Compound_SFID__c</fullName>
        <description>This is a compound key of the Relationship Type ID, Sales Area ID and the Accounts Involved Party ID.</description>
        <externalId>true</externalId>
        <label>Relationship Compound SFID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>RE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer by Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Sales Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IPR-{000000}</displayFormat>
        <label>Involved Party Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_cannot_be_Payer_to_itself</fullName>
        <active>true</active>
        <description>If relationship type is Payer and both accounts are the same give an error</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;RG&apos;),  Account__c =  Related_Account__c) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>An account cannot be a Payer to itself</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_not_create_or_update_BL_relationship</fullName>
        <active>true</active>
        <description>Since the relationships of type &apos;Business Location&apos; are created by integration user,the other users should not be able to create or edit  the relationships of type &apos;Business Location&apos;.</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c ,&apos;Business Location&apos; ), NOT(OR(( $Profile.Name =  $Setup.Get2OneCRM__c.Integration_Profile_Name__c )))) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Not Allowed to edit or create.replace this proper error msg</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_By_Partner_Check_1_Account_Cust</fullName>
        <active>true</active>
        <description>If relationship type is Customer by Partner then Involved Party A (Account) must be a Customer</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;Customer by Partner&apos;), NOT(ISPICKVAL(Account__r.Type, &apos;Customer&apos;)),  NOT(OR(Account__r.RecordType.Name = &apos;Work Site&apos;,
Account__r.RecordType.Name = &apos;Legal Entity&apos;))) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Account must be a Customer that is a Work Site or Legal Entity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_by_Partner_Check_2_Rel_Acc</fullName>
        <active>true</active>
        <description>Customer by partner related account must not contain certain record types</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;Customer by Partner&apos;), OR(Related_Account__r.RecordType.Name = &apos;Competitor&apos;, 
Related_Account__r.RecordType.Name = &apos;B2B Webshop Placeholder&apos;, 
Related_Account__r.RecordType.Name = &apos;B2C Webshop Placeholder&apos;,
Related_Account__r.RecordType.Name = &apos;Invoice Recipient&apos;,
Related_Account__r.RecordType.Name = &apos;PostNord Org Structure&apos;,
Related_Account__r.RecordType.Name = &apos;Private Person&apos;,
Related_Account__r.RecordType.Name = &apos;Extension&apos;)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Customer by Partner relationship must contain a Prospect/Customer/External Partner LE/WS as the related account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customers_Customer_Check_1_Account_Cust</fullName>
        <active>true</active>
        <description>If relationship type is Customer&apos;s Customer then Involved Party A (Account) must be a Customer</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;Customers Customer&apos;), NOT(ISPICKVAL(Account__r.Type, &apos;Customer&apos;)),  NOT(OR(Account__r.RecordType.Name = &apos;Work Site&apos;,
Account__r.RecordType.Name = &apos;Legal Entity&apos;))) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Account must be a Customer that is a Work Site or Legal Entity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customers_Customer_Check_2_Rel_Acc</fullName>
        <active>true</active>
        <description>Related Accounts must be customer/prospect/ext partner/competitor to be in the customers customer relationship</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;Customers Customer&apos;), OR(  
Related_Account__r.RecordType.Name = &apos;B2B Webshop Placeholder&apos;, 
Related_Account__r.RecordType.Name = &apos;B2C Webshop Placeholder&apos;,
Related_Account__r.RecordType.Name = &apos;Invoice Recipient&apos;,
Related_Account__r.RecordType.Name = &apos;PostNord Org Structure&apos;,
Related_Account__r.RecordType.Name = &apos;Extension&apos;,
Related_Account__r.RecordType.Name = &apos;Private Person&apos;)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Customers customers relationship must contain LE, Work Site, External Partner or Competitor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Recipient_Check_1_Account_Cust</fullName>
        <active>true</active>
        <description>If relationship type is Invoice Recipient then Involved Party A (Account) must be a Customer</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;RE&apos;), NOT(ISPICKVAL(Account__r.Type, &apos;Customer&apos;)),  NOT(OR(Account__r.RecordType.Name = &apos;Work Site&apos;,
Account__r.RecordType.Name = &apos;Extension&apos;))) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Account must be a Customer that is a Work Site or Extension</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Recipient_Check_2_Rel_Acc_Type</fullName>
        <active>true</active>
        <description>For relationship Invoice Recipient related account must be a customer or invoice recipient</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;RE&apos;), NOT(ISPICKVAL(Related_Account__r.Type, &apos;Customer&apos;)),
NOT(Related_Account__r.RecordType.Name = &apos;Invoice Recipient&apos;)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Related Account must be either a Customer or an Invoice Recipient</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Recipient_Check_3_Prim_Acc_IR</fullName>
        <active>true</active>
        <description>If relationship type is Invoice Recipient then Involved Party A (Account) cannot be an Invoice Recipient</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;RE&apos;), Account__r.RecordType.Name = &apos;Invoice Recipient&apos;) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Primary Account cannot be an Invoice recipient when relationship type is Invoice Recipient</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mark_For_Deletion_Check</fullName>
        <active>true</active>
        <description>If either the Account or Related Account has been marked for deletion, the relationship is invalid</description>
        <errorConditionFormula>OR( Account__r.Deletion_Flag__c = TRUE,  Related_Account__r.Deletion_Flag__c = TRUE) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>At least one of the accounts in this relationship has been marked for delete. You cannot relate a deleted account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Account_field_after_create</fullName>
        <active>true</active>
        <description>Account is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Account__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account may not be updated. If you need to update Account please create a new Relationship record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Rel_Acc_field_after_create</fullName>
        <active>true</active>
        <description>Related Account is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Related_Account__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Related_Account__c</errorDisplayField>
        <errorMessage>Related Account may not be updated. If you need to update Related Account please create a new Relationship record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Rel_Type_field_after_create</fullName>
        <active>true</active>
        <description>Relationship Type is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Relationship_Type__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Relationship_Type__c</errorDisplayField>
        <errorMessage>Relationship Type may not be updated. If you need to update Relationship Type please create a new Relationship record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Sales_Area_field_after_create</fullName>
        <active>true</active>
        <description>Sales Area is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Sales_Area__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Sales_Area__c</errorDisplayField>
        <errorMessage>Sales Area may not be updated. If you need to update Sales Area please create a new Relationship record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_on_Behalf_Check_1_Account_Cust</fullName>
        <active>true</active>
        <description>If relationship type is Order on Behalf then Involved Party A (Account) must be a Customer</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;YP&apos;), OR(ISPICKVAL(Account__r.Type, &apos;Prospect&apos;),
ISPICKVAL(Account__r.Type, &apos;Competitor&apos;),
ISPICKVAL(Account__r.Type, &apos;External Partner&apos;)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c != true)</errorConditionFormula>
        <errorMessage>Primary Account is not a Customer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_on_Behalf_Check_2_Account_RT</fullName>
        <active>true</active>
        <description>If relationship type is Order on Behalf then Involved Party A (Account) must be a Work Site or Extension</description>
        <errorConditionFormula>ISPICKVAL(Relationship_Type__c , &apos;YP&apos;) &amp;&amp;   Account__r.RecordType.Name != &apos;Work Site&apos; &amp;&amp;
Account__r.RecordType.Name != &apos;Extension&apos; &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c != true</errorConditionFormula>
        <errorMessage>Primary Account is not a Work Site or Extension</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payer_Check</fullName>
        <active>true</active>
        <description>If relationship type is Payer and both accounts are not customers then give an error message</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;RG&apos;), NOT(ISPICKVAL(Account__r.Type ,&apos;Customer&apos;)), NOT(ISPICKVAL(Related_Account__r.Type , &apos;Customer&apos;))) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Both accounts must be customers to have a Payer relationship.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Account_LE_Check</fullName>
        <active>true</active>
        <description>If the Primary Account is an LE for Invoice Recipient, Order on Behalf or Payer relationships give an error message</description>
        <errorConditionFormula>Account__r.RecordType.Name = &apos;Legal Entity&apos; &amp;&amp;
(ISPICKVAL (Relationship_Type__c, &apos;RE&apos;) ||
ISPICKVAL (Relationship_Type__c, &apos;RG&apos;) ||
ISPICKVAL (Relationship_Type__c, &apos;YP&apos;)) 
&amp;&amp; 
$Setup.DisableAutomation__c.Disable_All_Validation_Rules__c != true</errorConditionFormula>
        <errorMessage>Primary Account is LE. LE can not be part of Invoice recipient, Order on Behalf or Payer relationships</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relationship_Type_is_Mandatory</fullName>
        <active>true</active>
        <description>Relationship Type is always mandatory. Even though it is mandatory in the page layout an user in IE8 could work around this.</description>
        <errorConditionFormula>ISPICKVAL(Relationship_Type__c, &apos;&apos;) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Relationship_Type__c</errorDisplayField>
        <errorMessage>Relationship Type is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Area_Cannot_be_Changed</fullName>
        <active>true</active>
        <description>Once a Relationship record has been created, the Sales Area field cannot be changed</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Sales_Area__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Sales_Area__c</errorDisplayField>
        <errorMessage>Sales Area cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Agent_Check_1_Acc_Ext</fullName>
        <active>true</active>
        <description>Service Agent relationship must be between an extension of type Customer by Partner and an Account with External Partner Type of Media Bureau. Involved Party A must be Customer by Partner</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;ZF&apos;), 
NOT(ISPICKVAL(Account__r.Extension_Type__c, &apos;Customer by Partner&apos;))) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Account must be an Extension of type &apos;Customer by Partner&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Agent_Check_2_Rel_Acc_Cust</fullName>
        <active>true</active>
        <description>Service Agent relationship involved party B must be a customer</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c , &apos;ZF&apos;), 
NOT(ISPICKVAL(Related_Account__r.Type, &apos;Customer&apos;))) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Related Account must be a Customer</errorMessage>
    </validationRules>
</CustomObject>